# defensellm

./: .gitignore  0.FilesUpdate.xlsx  1.PromptsUpdate.xlsx  260320_1511_slide_content.md  260320_1530_security_flag_classifier_analysis.md  CLAUDE.md  DefenseLLM_Architecture.pptx  GLOBAL_RULES.md  README.md  check_auth.py  check_index.py  config.yaml  coverage_map.yaml  debug_ddg.py  project_summary.md  pyproject.toml  qwen2.5_quickstart.py  requirements.md  requirements.txt  run_err_test.py  run_offline_test.py  test_db_insert.py  test_empty_cit.py  test_fallback.py  test_gpu.py  todo.md
docs/: 01_requirements.md  02_unit_functions.md  03_unit_test_coverage.md  04_integration_functions.md  05_integration_test_coverage.md  06_testing_manual.md  06_web_ui_design_suggestions.md  CLI_MANUAL_KO.md  Defense_RAG_Improvement_Playbook.md  RAG_augumentation.md
output_docs/: 260325_1300_pdf_ocr_analysis.md  260326_agent_loop_roadmap.docx
review_docs/: 260326_1530_agent_loop_transition_analysis.md  260326_1600_online_offline_mode_analysis.md  260326_1630_web_search_dispatch_analysis.md  260326_1700_battle_context_schema_analysis.md  260326_1800_phase3_decision_tools_analysis.md  260326_1930_phase4_commander_interface.md
scripts/: doc_registry.json  download_rag_docs.bat  download_rag_docs.py  download_rag_docs.sh  fetch_real_docs.py  generate_step2.py  ingest_rag_docs.py  migrate_field_to_general.py  pdf_to_txt.py  start_all.bat  start_api.bat  start_api.sh  start_web.bat  start_web.sh  stop_all.bat  stop_all.sh  ubuntu_start_all.sh
tests/: test_rag_improvement.py
(+244 files in other folders)
